# vertex-matching-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: bench-smoke.yml  ci.yml
app/: main.cpp
app/cli/: cli_app.cpp  cli_app.hpp  command.hpp  parse_error.hpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp  tokenizer.cpp  tokenizer.hpp
bench/: benchmark_runner.cpp  benchmark_runner.hpp  main.cpp  smoke_to_md.py
docs/: application.md  benchmarks.md  cli.md  concurrency-test-matrix.md  core.md  domain.md  engine.md
docs/adr/: 0001-concurrency-model-and-invariants.md  0002-rest-api-transport-and-boundaries.md
include/vertex/application/: exchange.hpp  order_analytics.hpp  order_history.hpp  order_meta_store.hpp  trade_history.hpp
include/vertex/core/: asset.hpp  id_generator.hpp  market.hpp  strong_id.hpp  types.hpp
include/vertex/domain/: limit_order.hpp  market_order.hpp  order.hpp  trade.hpp  user.hpp  wallet.hpp
include/vertex/engine/: engine_async_error.hpp  market_dispatcher.hpp  market_worker.hpp  matching_engine.hpp  order_book.hpp  order_request.hpp  resting_order.hpp
src/application/: exchange.cpp  order_analytics.cpp  order_history.cpp  order_meta_store.cpp  trade_history.cpp
src/application/exchange/: exchange_analytics.cpp  exchange_core.cpp  exchange_order.cpp  exchange_settlement.cpp  exchange_wallet.cpp
src/domain/: limit_order.cpp  market_order.cpp  order.cpp  trade.cpp  user.cpp  wallet.cpp
src/engine/: market_dispatcher.cpp  market_worker.cpp  matching_engine.cpp  order_book.cpp
tests/: CMakeLists.txt
tests/application/: exchange_analytics_tests.cpp  exchange_concurrency_tests.cpp  exchange_test_access.hpp  exchange_tests.cpp  order_analytics_tests.cpp  order_history_tests.cpp  order_meta_store_test_access.hpp  order_meta_store_tests.cpp  trade_history_tests.cpp
tests/cli/: cli_app_tests.cpp  parser_tests.cpp  printer_tests.cpp  tokenizer_tests.cpp
tests/core/: asset_market_tests.cpp  id_generator_tests.cpp  strong_id_tests.cpp
tests/domain/: order_tests.cpp  trade_tests.cpp  user_tests.cpp  wallet_tests.cpp
tests/engine/: market_dispatcher_tests.cpp  market_worker_tests.cpp  matching_engine_tests.cpp  order_book_tests.cpp
